[project]
name = "otk"
version = "2024.0.0"
requires-python = ">= 3.9"

dependencies = [
    "pyyaml >= 6.0",
]

[project.scripts]
otk = "otk.command:root"
otk_external_osbuild = "otk_external_osbuild.command:root"

[project.optional-dependencies]
dev = [
    "autopep8",
    "pytest >= 8.0",
    "mypy >= 1.9",
    "types-PyYAML >= 6.0",
    "pre-commit",
    "pylint"
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 120

[tool.pylint.main]
max-line-length = 120
disable = ["C0114", "C0115", "C0116", "fixme", "protected-access", "redefined-outer-name"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
disallow_incomplete_defs = true
# TODO: follow
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
# and get to "--strict" eventually
#check_untyped_defs = true
#disallow_untyped_calls = true
